Adding bootstrap design

--- a/Node.js/public/css/mystyle.css
+++ b/Node.js/public/css/mystyle.css
@@ -1,13 +1,34 @@
 .button {
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-  }
-  
-  .button1 {background-color: #04AA6D;} /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.btnJ {
+  height: 50px;
+  width: 75px;
+}
+
+.button1 {
+  background-color: #04AA6D;
+}
+.SideJR{
+  position:fixed;
+   right:0px;
+   top:0px;
+   width: 5%;
+}
+.SideJL{
+  position:fixed;
+   left:0px;
+   top:0px;
+   width: 5%;
+}
+
+/* Green */
